# Iris

./: .gitignore  README.md
desktop/: pyproject.toml  requirements-desktop.txt  requirements-pi-os.txt  requirements-windows.txt
desktop/iris_desktop/: __init__.py  __main__.py  app.py  brain.py  deepgram_agent.py  face.py  types.py  vision.py  voice.py
desktop/scripts/: build_raspberry_pi_app.sh  build_windows_exe.ps1  download_desktop_models.py  setup_raspberry_pi_os.sh  setup_windows.ps1
src/iris_balance/: package.xml  setup.cfg  setup.py
src/iris_balance/iris_balance/: balance_node.py  complementary_filter.py  imu_node.py  pid.py
src/iris_brain/: package.xml  setup.cfg  setup.py
src/iris_brain/iris_brain/: body_commands.py  brain_node.py  llm_backends.py  personality.py
src/iris_brain/resource/: kid_prompt.txt
src/iris_bringup/: package.xml  setup.cfg  setup.py
src/iris_bringup/config/: iris.params.yaml  iris.pi.example.yaml  iris.remote_rest.example.yaml
src/iris_bringup/iris_bringup/: __init__.py
src/iris_bringup/launch/: full.launch.py  hardware_only.launch.py  perception.launch.py  remote_rest.launch.py
src/iris_bringup/resource/: iris_bringup
src/iris_bringup/scripts/: check_pi.sh  download_models.sh  install_deps.sh
src/iris_bringup/systemd/: iris.service  iris@.service
src/iris_ears/: package.xml  setup.cfg  setup.py
src/iris_ears/iris_ears/: __init__.py  speech_node.py
src/iris_ears/resource/: iris_ears
src/iris_eyes/: package.xml  setup.cfg  setup.py
src/iris_eyes/iris_eyes/: __init__.py  vision_node.py
src/iris_eyes/resource/: iris_eyes
src/iris_face/: package.xml  setup.cfg  setup.py
src/iris_face/iris_face/: __init__.py  face_node.py
src/iris_face/resource/: iris_face
src/iris_motion/: package.xml  setup.cfg  setup.py
src/iris_motion/iris_motion/: move_player_node.py  move_recorder_node.py  poppy_driver_node.py
src/iris_motion/moves/: idle.json  nod.json  thumbs_up.json  wave.json
src/iris_mouth/: package.xml  setup.cfg  setup.py
src/iris_mouth/iris_mouth/: __init__.py  tts_node.py
src/iris_mouth/resource/: iris_mouth
src/iris_msgs/: CMakeLists.txt  package.xml
src/iris_msgs/action/: PlayMoveSequence.action
src/iris_msgs/msg/: Emotion.msg  FaceDetection.msg  FaceDetectionArray.msg  Gesture.msg  JointTrim.msg  TouchEvent.msg  Viseme.msg  VisionObject.msg  VisionScene.msg
src/iris_msgs/srv/: PlayGesture.srv  RecordGesture.srv  SpeakText.srv
src/iris_orchestrator/: package.xml  setup.cfg  setup.py
src/iris_orchestrator/iris_orchestrator/: __init__.py  orchestrator_node.py
src/iris_orchestrator/resource/: iris_orchestrator
