<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_balance</name>
  <version>0.1.0</version>
  <description>IMU reader + PID standing balance controller.</description>
  <maintainer email="iris@example.com">Iris Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>iris_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>