<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_bringup</name>
  <version>0.1.0</version>
  <description>Launch, configuration, and system setup for the Iris stack.</description>
  <maintainer email="iris@example.com">Iris Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>iris_balance</exec_depend>
  <exec_depend>iris_brain</exec_depend>
  <exec_depend>iris_ears</exec_depend>
  <exec_depend>iris_eyes</exec_depend>
  <exec_depend>iris_face</exec_depend>
  <exec_depend>iris_motion</exec_depend>
  <exec_depend>iris_mouth</exec_depend>
  <exec_depend>iris_orchestrator</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>