<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>iris_ears</name>
  <version>0.1.0</version>
  <description>Speech input for Iris using keyboard fallback or Vosk microphone recognition.</description>
  <maintainer email="iris@example.com">Iris Team</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>